src/express/static/css/custom.css
.comments__text p {
  word-break: break-all;
}
.header,
.footer {
  justify-content: space-between;
  max-width: 1000px;
  margin-left: 0;
  margin-right: 0;
  align-self: center;
}

.header {
  gap: 16px;
}

.header__burger {
  margin: 0;
}

.header__avatar {
  margin: 0;
}

.header__name::after,
.header__nav-list p::after {
  display: none;
}

.popup--new-publication::before {
  right: 24%;
}

.navigation__item:first-of-type::before {
  right: 24%;
}

.form__field {
  padding: unset;
  border: unset;
}

.form__validation-error {
  margin-top: 8px;
  line-height: 1;
  margin-right: auto;
  width: max-content;
  border-radius: 2px;
  padding: 2px 16px 8px;
  border: 1px solid #a80000;
  color: #a80000;
  font-weight: 600;
}

.form__errors {
  /*padding-left: 0;*/
}

.form__wrapper {
  display: grid;
  grid-row-gap: 16px;
  margin-top: unset;
}

.form__validation-block {
  background-color: #ffeded;
  border-radius: 2px;
  padding: 16px 16px 16px;
  border: 1px solid #a80000;
}

.new-publication__wrapper {
  display: grid;
  grid-row-gap: 32px;
}

.new-publication__category-wrapper {
  padding: unset;
  display: flex;
  gap: 8px;
  align-items: flex-start;
  margin: 0;
}

.new-publication__checkbox {
  margin: unset;
}

.new-publication__form-link {
  margin: unset;
}

.header__navigation {
  left: -93px;
}

.header__navigation--open {
  display: block;
}

.header__button-new,
.new-publication__button {
  display: flex;
  align-items: center;
  gap: 8px;
  width: auto;
  padding-left: 20px;
  padding-right: 20px;
}

.header__exit {
  margin-left: 0;
}

.header__nav-list {
  gap: 12px;
}

.header__enter,
.header__registration {
  margin-right: 0;
  margin-left: 0;
}

.navigation__item a {
  display: flex;
  align-items: center;
  gap: 8px;
}

.ms-Icon {
  line-height: 1;
}

.navigation {
  width: auto;
}

.avatar-emoji {
  display: flex;
  align-items: center;
  flex: 0 0 auto;
  border-radius: 50%;
  background: linear-gradient(#72d5fd, #2a9ef1);
  user-select: none;
  width: 50px;
  height: 50px;
  justify-content: center;
  text-align: center;
}

.avatar-emoji__size_small {
  width: 20px;
  height: 20px;
  font-size: 15px;
}

.avatar-emoji__size_medium {
  width: 50px;
  height: 50px;
  font-size: 30px;
}

.button--colored {
  border-radius: 25px;
}

.button--popup-close {
  border-color: #595959;
  opacity: 0.8;
}

.publication__list-item {
  padding-right: 0;
  margin-bottom: 0;
  padding-top: 19px;
  padding-bottom: 19px;
}

.publication__text-strong:hover {
  color: #2f80ed;
}

.authors-comment {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: auto min-content;
  justify-content: space-between;
}

.new-publication__header {
  padding-right: 0;
  align-items: center;
}

.new-publication__checkbox input {
  width: 0;
}

.new-publication__page-title {
  margin-right: auto;
}

.field-label {
  padding: 5px 0;
}

.dialog-header {
  display: flex;
  justify-content: space-between;
}

.popup {
  border-radius: 2px;
  padding-top: 30px;
}

.form__image-loader {
  margin-top: 0;
}

.preview__item {
  min-height: auto;
}

.articles-category__title {
  margin-bottom: 60px;
}

.form--log-in .form__error-message {
  padding: 0;
}

.form__error-message {
  color: #a80000;
}

.footer__copyright {
  height: 38px;
}

.comments__footer {
  display: grid;
  grid-row-gap: 16px;
}

.comment-form {

}

.comments__button {
  align-self: center;
}

.last-comment {

}

.last-comment__header {
  display: flex;
  align-items: center;
}

.last-comment__author-name {
  font-size: 13px;
}

.last-comment__text {
  display: block;
  margin-top: 8px;
}

.last-comment__text:hover {
  color:#2f80ed
}

.main-page__section-flex {
  min-height: auto;
}

